tests/integration/features/document_fragments/_validations/01_document_file_path_must_be_valid/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: [DOCUMENT_FROM_FILE]: Path to a document file does not exist: nested.sdoc.
